<resources>
    <string name="app_name">FirebaseDAM</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="acceder">ACCEDER</string>
    <string name="registrar">REGISTRAR</string>
    <string name="sign_out">Sign out</string>
    <string name="close_session">Close Session</string>
    <string name="proveedor">Proveedor</string>
    <string name="google">Google</string>
    <string name="prefs_file">"com.kodeleku.firebasedam_v1.PREFERENCE_FILE_KEY"</string>
    <string name="crash">Crash</string>
</resources>